feat: filter day, update break time in task
